fixing custom font not working on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,18 @@
 
 @font-face {
     font-family: 'Prime';
-    src: url('../fonts/Prime/Prime-Light.eot');
-    src: url('../fonts/Prime/Prime-Light.woff') format('woff'),
-    url('../fonts/Prime/Prime-Light.woff2') format('woff2')
+    src: url('Prime-Light.eot');
+    src: url('Prime-Light.eot?#iefix') format('embedded-opentype'),
+        url('Prime-Light.woff2') format('woff2'),
+        url('Prime-Light.woff') format('woff'),
+        url('Prime-Light.ttf') format('truetype'),
+        url('Prime-Light.svg#Prime-Light') format('svg');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
 }
+
+
 
 *{
     padding: 0;
